# jdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  deny.toml  install.ps1  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/: e2e_ctrlc.ps1  e2e_maven.ps1  e2e_validate.ps1
.github/workflows/: ci.yml  e2e.yml  index.yml  release.yml
crates/jdk/: Cargo.toml
crates/jdk-core/: Cargo.toml
crates/jdk-core/src/: admin.rs  cache.rs  catalog.rs  config.rs  current.rs  download.rs  env.rs  error.rs  extract.rs  file_ops.rs  foojay.rs  http.rs  index.rs  install.rs  layout.rs  lib.rs  release.rs  shims.rs
crates/jdk-core/tests/: hermetic.rs
crates/jdk-index-gen/: Cargo.toml
crates/jdk-index-gen/src/: fetch.rs  main.rs  output.rs  validate.rs
crates/jdk-index-gen/tests/: generator.rs
crates/jdk-resolve/: Cargo.toml
crates/jdk-resolve/benches/: shim_bench.rs
crates/jdk-resolve/src/: cascade.rs  config.rs  exit.rs  lib.rs  pin.rs  selector.rs  store.rs  text.rs  version.rs
crates/jdk-shim/: Cargo.toml
crates/jdk-shim/src/: main.rs
crates/jdk-shim/tests/: auto_install.rs  shim.rs
crates/jdk-shim/tests/common/: mod.rs
crates/jdk/src/: available.rs  current.rs  doctor.rs  fail.rs  install.rs  list.rs  main.rs  pin.rs  remote.rs  resolve.rs  setup.rs  uninstall.rs  update.rs  use.rs  which.rs
crates/jdk/tests/: acceptance.rs  cli.rs  pillar.rs  update.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs  reg.rs
scripts/: check-versions.ps1
