[workspace]
resolver = "3"
members = [
    "crates/jdk",
    "crates/jdk-core",
    "crates/jdk-index-gen",
    "crates/jdk-resolve",
    "crates/jdk-shim",
    "crates/test-support",
]

# publish is off by default so an internal crate never leaks to crates.io; the
# three published crates (jdk, jdk-core, jdk-resolve) opt back in explicitly.
[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/isacgalvao/jdk"
publish = false

# Size-optimized profile for the shim, which is copied byte-identically once
# per JDK tool — so every byte counts.
[profile.release-shim]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
panic = "abort"  # Smaller binary without unwinding
strip = true  # Strip symbols
