[package]
name = "jdk-resolve"
description = "Selector parsing, pin-file cascade and store paths shared by the jdk CLI and shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true

# Shim firewall: no runtime dependencies, std only. Anything heavier belongs in jdk-core.

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "shim_bench"
harness = false
