[package]
name = "jdk"
description = "Windows-first Java version manager: per-project auto-switch via real .exe shims plus a persistent global JAVA_HOME"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
jdk-core = { path = "../jdk-core", version = "0.4.0" }
jdk-resolve = { path = "../jdk-resolve", version = "0.4.0" }
clap = { version = "4", features = ["derive"] }
# Progress rendering lives here, never in jdk-core (which only exposes a
# callback) — the engine stays UI-free.
indicatif = "0.18"

[dev-dependencies]
tempfile = "3"
test-support = { path = "../test-support" }
